src/objects/Stream__c.object
<CustomObject>
    <description>This will hold the daily extract of groups from BRMS and Peoplesoft database to be used on the Explore page for Stream.</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEX_Picklist__c</fullName>
        <label>IEX_Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeopleSoftID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PeopleSoftID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PolicyNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stream Groups</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountID__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>PolicyNumber__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Source__c</columns>
        <columns>IEX_Picklist__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BRMS_Groups_Loaded_by_BOT</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>PolicyNumber__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Source__c</columns>
        <columns>AccountID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>DCSM Auto Email User</value>
        </filters>
        <label>BRMS Groups Loaded by BOT</label>
    </listViews>
    <nameField>
        <displayFormat>SG-{0000000}</displayFormat>
        <label>Stream Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stream Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>